# fastcow-devops

./: .gitignore  .pylintrc  README.md  alembic.ini  pyproject.toml
app/: base.py  config.yaml  depends.py  initial_models.py  main.py  tasks.py
app/alembic/: env.py
app/alembic/versions/: e1c174a1664d_initial_models.py
app/apis/: __init__.py  deps.py  routers.py
app/apis/assets/: __init__.py
app/apis/assets/fields/: fields_api.py  fields_deps.py  fields_schema.py
app/apis/assets/groups/: groups_api.py  groups_schema.py
app/apis/assets/hosts/: hosts_api.py
app/apis/auth/: __init__.py
app/apis/auth/menus/: menus_api.py  menus_schema.py
app/apis/auth/roles/: roles_api.py  roles_crud.py  roles_schema.py
app/apis/auth/users/: users_api.py  users_crud.py  users_schema.py
app/apis/files/: __init__.py  files_api.py  files_desp.py  files_schema.py
app/apis/login/: login_api.py  login_deps.py  login_schema.py
app/apis/system/: __init__.py
app/apis/system/apicheck/: check_api.py  check_schema.py
app/apis/system/settings/: settings_api.py  settings_deps.py  settings_schema.py
app/apis/tasks/: __init__.py
app/apis/tasks/execution/: execution_api.py  execution_schema.py
app/core/: base.py  cache.py  config.py  database.py  events.py  exeption.py  logs.py  middleware.py  routers.py  security.py
app/core/database/: __init__.py  db_engines.py
app/ext/ansible_tsk/: helper.py  runner.py  tasks.py
app/ext/channels/: tasks.py  utils.py
app/ext/channels_tsk/: email.py  tasks.py
app/ext/cleanup_tsk/: tasks.py
app/ext/ldap/: ldap_auth.py  tasks.py  utils.py
app/ext/ldap_tsk/: ldap_auth.py  tasks.py
app/ext/sqlmodel_celery_beat/: clockedschedule.py  models.py  schedulers.py  tzcrontab.py  util.py
app/extend/: __init__.py
app/extend/channels/: email.py
app/extend/ldap/: ldap_auth.py
app/models/: auth_model.py  system_model.py  tasks_model.py
app/templates/src/: email-test.mjml  reset-password.mjml  reset-totp.mjml
app/utils/: cache_tools.py  datetime_tools.py  encryption.py  files_tools.py  format_tools.py  ipaddress_tools.py  password_tools.py
config/: config.yaml
(+6 files in other folders)
